--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  google_fonts: ^2.0.0
-  flutter_svg: ^0.22.0
+  google_fonts: ^1.1.2
+  flutter_barcode_scanner: ^1.0.2
+
 
 dev_dependencies:
   flutter_test:
@@ -25,5 +26,6 @@ flutter:
   uses-material-design: true
 
   assets:
+   - assets/database/
    - assets/images/
    - assets/icons/
